when renaming something in the navigation, increment version and timestamp